# openocto

./: .gitignore  BRAND.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  TERMS.md  install.ps1  install.sh  pyproject.toml
config/: default.yaml
docs/: api-reference.md  api-v1-reference.md  building-windows-arm64.md  mcp-clients.md  openocto-architecture.md  openocto-vision.md  raspberry-pi-displaylink-setup.md
openocto/: __init__.py  __main__.py  app.py  config.py  event_bus.py  history.py  memory.py  search.py  setup_wizard.py  state_machine.py  wizard_data.py
openocto/ai/: base.py  claude.py  openai_compat.py  router.py
openocto/audio/: capture.py  player.py
openocto/mcp/: __init__.py  auth.py  server.py
openocto/mcp_client/: __init__.py  adapter.py  client.py  registry.py  secrets.py  store.py
openocto/persona/: manager.py
openocto/skills/: __init__.py  base.py  file_ops.py  launcher.py  media_player.py  notes.py  (+6 more)
scripts/: install.ps1  install.sh
tests/: test_ai_router.py  test_ai_tool_calling.py  test_api_v1.py  test_config.py  test_error_detection.py  test_event_bus.py  test_history.py  test_mcp_client.py  test_mcp_client_secrets.py  test_mcp_client_store.py  test_mcp_server.py  test_mdns.py  test_memory.py  test_persona.py  test_search.py  test_skill_file_ops.py  test_skill_launcher.py  test_skill_media_player.py  test_skill_notes.py  test_skill_plane_status.py  test_skill_registry.py  test_skill_timer.py  test_skill_weather.py  test_skills_builder.py  test_skills_simple.py  test_state_machine.py  test_web.py  test_wizard_data.py
(+59 files in other folders)
